# Langchain_Projects

AI Job Recommender/: app.py  pyproject.toml  requirements.txt
AI Job Recommender/src/: helper.py  prompt.py  pydantic_model.py
Academic Researcher/: academic_researcher.py
Researcher_ai/: app.py  user.py
Web_QA/: app.py
Youtube Explainer/: Youtube_explainer.py
