[project]
name = "job-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apify-client==1.6.1",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.7",
    "prettytable>=3.16.0",
    "pymupdf>=1.26.3",
    "pypdf>=5.9.0",
    "streamlit>=1.48.0",
]
